[gd_scene load_steps=16 format=3 uid="uid://8n0tp2dnpjhf"]

[ext_resource type="Script" path="res://scenes/UI/leaderbords_script.gd" id="1_cjkv0"]
[ext_resource type="Theme" uid="uid://bb8apv2jr3hbr" path="res://Default_Theme.tres" id="1_xi67m"]
[ext_resource type="Texture2D" uid="uid://bry3s1hxj3qaw" path="res://assets/sprites/coin_one.png" id="2_20ba7"]
[ext_resource type="Texture2D" uid="uid://i707j707g8jb" path="res://assets/sprites/slime_green_one.png" id="3_dca55"]
[ext_resource type="Texture2D" uid="uid://d04boffk3qngb" path="res://assets/sprites/loading_heart_1.png" id="3_psqqv"]
[ext_resource type="Texture2D" uid="uid://7fyntbeoqim8" path="res://assets/sprites/clock_one.jpg" id="4_ta4fi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rk3et"]
atlas = ExtResource("3_psqqv")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_usbja"]
atlas = ExtResource("3_psqqv")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1aqo"]
atlas = ExtResource("3_psqqv")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0v0i"]
atlas = ExtResource("3_psqqv")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyxvj"]
atlas = ExtResource("3_psqqv")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h57u8"]
atlas = ExtResource("3_psqqv")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc0m1"]
atlas = ExtResource("3_psqqv")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgeq3"]
atlas = ExtResource("3_psqqv")
region = Rect2(336, 96, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_od4gl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk3et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usbja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1aqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0v0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyxvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h57u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc0m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgeq3")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="LeaderbordsSceen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cjkv0")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("1_xi67m")
theme_override_font_sizes/font_size = 23
text = "Rezultati"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/ScrollContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentPlayer" type="MarginContainer" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel"]
layout_mode = 2
offset_right = 650.0
offset_bottom = 110.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 40

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel/CurrentPlayer"]
layout_mode = 2
theme = ExtResource("1_xi67m")
columns = 5

[node name="Place" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel/CurrentPlayer/GridContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
vertical_alignment = 1

[node name="Username" type="TextEdit" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel/CurrentPlayer/GridContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
placeholder_text = "Ieraksti savu vārdu"

[node name="GridContainer2" type="GridContainer" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel/CurrentPlayer/GridContainer"]
layout_mode = 2
columns = 2

[node name="NaudiņasBilde" type="TextureRect" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel/CurrentPlayer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_20ba7")
expand_mode = 3
stretch_mode = 3

[node name="Coins" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel/CurrentPlayer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100"
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel/CurrentPlayer/GridContainer"]
layout_mode = 2
columns = 2

[node name="PretiniekiBilde" type="TextureRect" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel/CurrentPlayer/GridContainer/GridContainer"]
clip_contents = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_dca55")
expand_mode = 3
stretch_mode = 3

[node name="Enemies" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel/CurrentPlayer/GridContainer/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "99"
vertical_alignment = 1

[node name="GridContainer3" type="GridContainer" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel/CurrentPlayer/GridContainer"]
layout_mode = 2
columns = 2

[node name="PulkstenisBilde" type="TextureRect" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel/CurrentPlayer/GridContainer/GridContainer3"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("4_ta4fi")
expand_mode = 2
stretch_mode = 5

[node name="Time" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel/CurrentPlayer/GridContainer/GridContainer3"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "00:00:00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel"]
position = Vector2(324, 52)
sprite_frames = SubResource("SpriteFrames_od4gl")
autoplay = "default"
frame_progress = 0.794552

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/Panel"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -31.0
offset_right = 54.0
grow_horizontal = 2
grow_vertical = 0

[node name="GridContainer" type="GridContainer" parent="ButtonPanel"]
layout_mode = 2
columns = 2

[node name="ToPreviousLevel" type="Button" parent="ButtonPanel/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Try again"

[node name="Button_Add" type="Button" parent="ButtonPanel/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Save"

[node name="Refresh" type="Button" parent="ButtonPanel/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Refresh lederboard"

[node name="ToNextLevel" type="Button" parent="ButtonPanel/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "To next level"

[connection signal="button_down" from="ButtonPanel/GridContainer/Button_Add" to="." method="press_add"]
[connection signal="button_down" from="ButtonPanel/GridContainer/Refresh" to="." method="press_update"]
